git issue web address

--- a/_latex/apo-lecture.sty
+++ b/_latex/apo-lecture.sty
@@ -93,4 +93,4 @@
 
 \newcommand\includeanim[2][]{{\def\gfxattrs{#1}\input{anim/#2/overlay}}}
 
-\newcommand\feedbacklink[1]{\href{https://gitlab.fel.cvut.cz/osy/osy.pages.fel.cvut.cz/-/issues/new?issue[title]=Přednáška \jobname, slide \insertframenumber\space(\osyFrameTitle)\&issue[description]=Zde vložte váš dotaz či připomínku.}{#1}}
+\newcommand\feedbacklink[1]{\href{https://gitlab.fel.cvut.cz/b35apo/apo-slides/-/issues/new?issue[title]=Přednáška \jobname, slide \insertframenumber\space(\osyFrameTitle)\&issue[description]=Zde vložte váš dotaz či připomínku.}{#1}}
