lekce1 mini update

--- a/01-intro/lekce01-intro.tex
+++ b/01-intro/lekce01-intro.tex
@@ -14,6 +14,27 @@
 
 \section{Úvod}
 
+
+\begin{frame}
+\frametitle{Motivace}
+Co ovlivňuje rychlost vykonávání Vašich programů:
+\begin{itemize}
+\item Výkon CPU 
+  \begin{itemize}
+    \item Frekvence CPU
+    \item Efektivita CPU - kolik operací stihne provést za 1 takt procesoru
+    \item Efektivita načítání dat z paměti
+  \end{itemize}
+\item Počet jader CPU
+  \begin{itemize}
+    \item Lze Váš program paralelizovat?
+    \item Pokud ne, pak je jedno, kolik jader má CPU
+    \item I pokud ano, tak nikdy nejde paralelizovat celý výpočet
+  \end{itemize}
+\end{itemize}
+\end{frame}
+
+
 \begin{frame}
 \frametitle{Motivace}
 Proč studovat architektury počítačů:
@@ -31,7 +52,6 @@ Proč studovat architektury počítačů:
   \end{itemize}
 \end{itemize}
 \end{itemize}
-
 \end{frame}
 
 
