Lekce1 next update

--- a/01-intro/lekce01-intro.tex
+++ b/01-intro/lekce01-intro.tex
@@ -264,8 +264,8 @@ nebo zapisovat:\\
 \frametitle{Instrukce procesoru}
 
 \begin{itemize}
-\item Instrukce procesoru jsou jediné činnosti, které procesor umí
-\item Základní instrukce umí:
+\item Instrukce procesoru jsou jediné činnosti, které procesor umí vykonat
+\item Základní instrukce jsou:
 \begin{itemize}
 \item načíst data z paměti do registrů
 \item provést matematickou operaci s registry a výsledek uložit do registrů
@@ -273,7 +273,7 @@ nebo zapisovat:\\
 \item porovnat dvě čísla
 \item podle výsledku porovnání provádět jiné instrukce (změnit PC na jinou hodnotu než je následující instrukce = provést skok v programu)
 \end{itemize}
-\item veškeré programy, ať už vytvořené v jazyku C, Python, provádějící i velmi komplexní výpočty jsou složené pouze z těchto jednoduchých instrukcí procesoru
+\item veškeré programy, ať už vytvořené v jazyku C, Python, programy provádějící i velmi komplexní výpočty jsou složené pouze z těchto jednoduchých instrukcí procesoru
 \end{itemize}
 
 \end{frame}
